--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,12 @@
-repos:
-  - repo: https://github.com/vkseth/vfde-pre-commit-hooks
-    rev: v2.3.4
-    hooks:
-      - id: tflint
-
 # repos:
-# -   repo: https://github.com/pre-commit/pre-commit-hooks
-#     rev: v2.3.0
+#   - repo: https://github.com/vkseth/vfde-pre-commit-hooks
+#     rev: v2.3.4
 #     hooks:
-#     -   id: check-yaml
-#     -   id: end-of-file-fixer
-#     -   id: trailing-whitespace
-# -   repo: https://github.com/psf/black
-#     rev: 21.12b0
-#     hooks:
-#     -   id: black
+#       - id: tflint
+
+repos:
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.3.0
+    hooks:
+    -   id: tflint
+
