--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,8 @@
+default_stages: [commit]
 repos:
--   repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.55.0
+  -  repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.64.1
     hooks:
-    -   id: terraform_fmt
+      -  id: terraform_fmt
+      -  id: terraform_validate
+      -  id: terraform_tflint
